WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134814
[iOS WebKit2] Don't uninstall the memory pressure listener after first signal.
https://bugs.webkit.org/show_bug.cgi?id=134814
Summary
[iOS WebKit2] Don't uninstall the memory pressure listener after first signal.
Andreas Kling
Reported
2014-07-10 15:15:27 PDT
[iOS WebKit2] Don't uninstall the memory pressure listener after first signal.
Attachments
Patch
(1.34 KB, patch)
2014-07-10 15:15 PDT
,
Andreas Kling
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-07-10 15:15:54 PDT
Created
attachment 234726
[details]
Patch
Andreas Kling
Comment 2
2014-07-10 15:26:58 PDT
Committed
r170978
: <
http://trac.webkit.org/changeset/170978
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug