[iOS WebKit2] Don't uninstall the memory pressure listener after first signal. <https://webkit.org/b/134814>

The call to uninstall() should not be made on iOS since iOS doesn't use the
hold-off mechanism in MemoryPressureHandler.

Reviewed by Benjamin Poulain.

* platform/cocoa/MemoryPressureHandlerCocoa.mm:
(WebCore::MemoryPressureHandler::respondToMemoryPressure):

Canonical link: https://commits.webkit.org/152761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170978 268f45cc-cd09-0410-ab3c-d52691b4dbfc